Completed basic site, only missing content for 2017 team; added more pictures

--- a/pages/team.html
+++ b/pages/team.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -54,10 +55,40 @@
     </nav>
 
     <!-- Light Body -->
+    <!-- Teams Through The Years -->
     <div class="container-fluid body-light">
-        <div class="container">
-            <h1 class="h1-responsive card-title">Our Team</h1>
-            <img class="img-fluid" src="../assets/OurTeam.jpg">
+        <!-- Team 2018 -->
+        <div class="container" id="team2018">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="h1-responsive card-title float-left header-dark">2018</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
+                    <img class="img-fluid team-image z-depth-2" src="../assets/2018/OurTeam.jpg">
+                </div>
+                <div class="col-sm-12 col-lg-3">
+                    <img class="team-image-sm z-depth-2" src="../assets/2018/full-lift.jpg" alt="Insert Robot Pic Here">
+                </div>
+                <div class="col-sm-12 col-lg-3">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="team-image-sm z-depth-2" src="../assets/2018/2018robot_start.jpg" alt="Insert Robot Pic Here">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <img class="team-image-sm z-depth-2" src="../assets/2018/fixing-bot.JPG" alt="Insert Robot Pic Here">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h3 class="header-dark">Our Team</h3>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
                     <table class="name-box">
@@ -116,21 +147,94 @@
                     </table>
                 </div>
             </div>
+
+            <!-- Team 2017 -->
+            <div class="container" id="team2017">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1 class="h1-responsive card-title float-left header-dark">2017</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-lg-6">
+                        <img class="img-fluid team-image z-depth-2" src="../assets/2017/pit.JPG">
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="../assets/" alt="Insert Robot Pic Here">
+                            </div>
+                            <div class="col-sm-6">
+                                <img src="../assets/" alt="Insert Robot Pic Here">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img src="../assets/" alt="Insert Robot Pic Here">
+                            </div>
+                            <div class="col-sm-6">
+                                <img src="../assets/" alt="Insert Robot Pic Here">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+
+        <!-- Footer -->
+        <div class="container-fluid dark-footer">
+            <footer class="page-footer dark-footer">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h5 class="footer-heading">Team 6612
+                            <br>
+                            <h6 class="footer-subheading">NexGen Robotics</h6>
+                        </h5>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h5 class="footer-list-heading">Team</h5>
+                        <ul class="list-unstyled footer-list">
+                            <li>
+                                <a href="team.html#team2017">2017</a>
+                            </li>
+                            <li>
+                                <a href="team.html#team2018">2018</a>
+                            </li>
+                            <li>
+                                <a href="webdevteam.html">Web Dev Team</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h5 class="footer-list-heading">Contact
+                            <br>
+                            <h6 class="footer-subheading">business@dvhsrobotics.org</h6>
+                        </h5>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h5 class="footer-list-heading">
+                            <a href="calendar.html">Calendar</a>
+                        </h5>
+                        <h5 class="">
+                            <a href="sponsors.html">Sponsors</a>
+                        </h5>
+                    </div>
+                </div>
+            </footer>
+        </div>
 
 
 
 
-    <!-- SCRIPTS -->
-    <!-- JQuery -->
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../js/popper.min.js"></script>
-    <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
-    <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../js/mdb.min.js"></script>
+        <!-- SCRIPTS -->
+        <!-- JQuery -->
+        <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+        <!-- Bootstrap tooltips -->
+        <script type="text/javascript" src="../js/popper.min.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+        <!-- MDB core JavaScript -->
+        <script type="text/javascript" src="../js/mdb.min.js"></script>
 </body>
 
 </html>
