--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -87,13 +88,21 @@
                     <ol class="carousel-indicators">
                         <li data-target="#mainCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#mainCarousel" data-slide-to="1"></li>
+                        <li data-target="#mainCarousel" data-slide-to="2"></li>
+                        <li data-target="#mainCarousel" data-slide-to="3"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/article-resized.jpg" alt="working picture">
+                            <img class="d-block w-100" src="assets/2018/article-resized.jpg" alt="working picture">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/ourteam-resized.jpg" alt="group photo">
+                            <img class="d-block w-100" src="assets/2018/ourteam-resized.jpg" alt="group photo">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/2018/seniors-resized.jpg" alt="group photo">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="assets/2018/junios-resized.jpg" alt="group photo">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
@@ -114,7 +123,7 @@
     <div class="container-fluid body-dark" id="competitions">
         <h1>First Robotics Competition</h1>
         <div class="row">
-            <div class="col-md-12 col-lg-4">
+            <div class="col-sm-12 col-md-8 col-lg-4">
                 <div class="card">
                     <div class="view">
                         <img class="card-img-top" src="assets/steamworks-1200px.png">
@@ -125,10 +134,14 @@
                             <a href="https://www.youtube.com/watch?v=EMiNmJW7enI" target="_blank">
                                 <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
                         </button>
+                        <a href="pages/team.html#team2017">
+                            <button class="btn btn-primary">
+                                <i class="fa fa-cog"></i> Our Robot</button>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-12 col-lg-4">
+            <div class="col-sm-12 col-md-8 col-lg-4">
                 <div class="card">
                     <div class="view">
                         <img class="card-img-top powerup" src="assets/powerup-1200px.png">
@@ -139,10 +152,14 @@
                             <a href="https://www.youtube.com/watch?v=HZbdwYiCY74" target="_blank">
                                 <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
                         </button>
+                        <a href="pages/team.html#team2018">
+                            <button class="btn btn-primary">
+                                <i class="fa fa-cog"></i> Our Robot</button>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-12 col-lg-4">
+            <div class="col-sm-12 col-md-8 col-lg-4">
                 <div class="card">
                     <div class="view">
                         <img class="card-img-top" src="assets/deepspace-1200px.jpg">
@@ -156,16 +173,46 @@
                 </div>
             </div>
         </div>
-
+        <br>
+        <br>
     </div>
 
-    <div class="container-fluid">
-        <footer>
-
+    <!-- Footer -->
+    <div class="container-fluid dark-footer">
+        <footer class="page-footer dark-footer">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-heading">Team 6612
+                        <br>
+                        <h6 class="footer-subheading">NexGen Robotics</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Team</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <a href="pages/team.html#team2017">2017</a>
+                        </li>
+                        <li>
+                            <a href="pages/team.html#team2018">2018</a>
+                        </li>
+                        <li>
+                            <a href="pages/webdevteam.html">Web Dev Team</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                        <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading">business@dvhsrobotics.org</h6></h5>
+                    </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading"><a href="pages/calendar.html">Calendar</a></h5>
+                    <h5 class=""><a href="pages/sponsors.html">Sponsors</a></h5>
+                </div>
+            </div>
         </footer>
     </div>
 
-
+    <!-- Yes I know my class naming scheme and css are a mess -->
 
 
     <!-- SCRIPTS -->
