--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -46,7 +47,10 @@
                     <a class="nav-link" href="calendar.html">Calendar</a>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="btn btn-sm btn-yellow"><a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics"><i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a></button>
+                    <button type="button" class="btn btn-sm btn-yellow">
+                        <a class="nav-link" target="_blank" href="https://www.gofundme.com/nexgen-robotics">
+                            <i class="fa fa-heart pr-2" aria-hidden="true"></i>Donate</a>
+                    </button>
                 </li>
             </ul>
         </div>
@@ -57,6 +61,54 @@
         <iframe width="95%" height="550vw" class="image" src="https://calendar.google.com/calendar/embed?src=business%40dvhsrobotics.org&amp;ctz=America%2FLos_Angeles"
             frameborder="0" scrolling="no" style="border: 0">
         </iframe>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <!-- Footer -->
+    <div class="container-fluid dark-footer">
+        <footer class="page-footer dark-footer">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-heading">Team 6612
+                        <br>
+                        <h6 class="footer-subheading">NexGen Robotics</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Team</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <a href="team.html#team2017">2017</a>
+                        </li>
+                        <li>
+                            <a href="team.html#team2018">2018</a>
+                        </li>
+                        <li>
+                            <a href="webdevteam.html">Web Dev Team</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Contact
+                        <br>
+                        <h6 class="footer-subheading">business@dvhsrobotics.org</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">
+                        <a href="calendar.html">Calendar</a>
+                    </h5>
+                    <h5 class="">
+                        <a href="sponsors.html">Sponsors</a>
+                    </h5>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
