--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -54,15 +55,78 @@
     </nav>
 
     <!-- Sponsor Images/Links -->
-    <div class="body-dark">
+    <div class=" container-fluid body-dark">
         <h1>Thank You to Our Sponsors!</h1>
-        <h3>If you or your organization are interested in supporting us, please contact us at <b>business@dvhsrobotics.org</b>.</h3>
+        <h3>If you or your organization are interested in supporting us, please contact us at
+            <br>
+            <b>business@dvhsrobotics.org</b>.</h3>
         <hr>
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-                <a href="https://www.dow.com/en-us/about-dow/locations/pittsburg"><img class="img-fluid" src="../assets/Dow_Chemical_Company_logo.svg.png"></a>
+                <a href="https://www.dow.com/en-us/about-dow/locations/pittsburg">
+                    <img class="img-fluid" src="../assets/Dow_Chemical_Company_logo.svg.png">
+                </a>
             </div>
+            <div class="col"></div>
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    </div>
+
+    <!-- Footer -->
+    <div class="container-fluid dark-footer">
+        <footer class="page-footer dark-footer">
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-heading">Team 6612
+                        <br>
+                        <h6 class="footer-subheading">NexGen Robotics</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Team</h5>
+                    <ul class="list-unstyled footer-list">
+                        <li>
+                            <a href="team.html#team2017">2017</a>
+                        </li>
+                        <li>
+                            <a href="team.html#team2018">2018</a>
+                        </li>
+                        <li>
+                            <a href="webdevteam.html">Web Dev Team</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">Contact
+                        <br>
+                        <h6 class="footer-subheading">business@dvhsrobotics.org</h6>
+                    </h5>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <h5 class="footer-list-heading">
+                        <a href="calendar.html">Calendar</a>
+                    </h5>
+                    <h5 class="">
+                        <a href="sponsors.html">Sponsors</a>
+                    </h5>
+                </div>
+            </div>
+        </footer>
     </div>
 
 
