Fixed element padding/margin

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
     <div class="container-fluid body-dark" id="competitions">
         <h1>First Robotics Competition</h1>
         <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-4">
+            <div class="col card-side-column"></div>
+            <div class="col-sm-12 col-md-4 col-lg-3">
                 <div class="card">
                     <div class="view">
                         <img class="card-img-top" src="assets/steamworks-1200px.png">
@@ -135,13 +136,13 @@
                                 <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
                         </button>
                         <a href="pages/team.html#team2017">
-                            <button class="btn btn-primary">
+                            <button class="btn btn-primary our-robot">
                                 <i class="fa fa-cog"></i> Our Robot</button>
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-8 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-3">
                 <div class="card">
                     <div class="view">
                         <img class="card-img-top powerup" src="assets/powerup-1200px.png">
@@ -153,13 +154,13 @@
                                 <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
                         </button>
                         <a href="pages/team.html#team2018">
-                            <button class="btn btn-primary">
+                            <button class="btn btn-primary our-robot">
                                 <i class="fa fa-cog"></i> Our Robot</button>
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-8 col-lg-4">
+            <div class="col-sm-12 col-md-4 col-lg-3">
                 <div class="card">
                     <div class="view">
                         <img class="card-img-top" src="assets/deepspace-1200px.jpg">
@@ -172,6 +173,7 @@
                     </div>
                 </div>
             </div>
+            <div class="col card-side-column"></div>
         </div>
         <br>
         <br>
@@ -202,7 +204,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading">business@dvhsrobotics.org</h6></h5>
+                        <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6></h5>
                     </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <h5 class="footer-list-heading"><a href="pages/calendar.html">Calendar</a></h5>
