--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -67,6 +67,12 @@
                     <img class="img-fluid" src="../assets/Dow_Chemical_Company_logo.svg.png">
                 </a>
             </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+                <a href="https://www.elks.org/lodges/home.cfm?lodgenumber=1474">
+                    <img class="img-fluid" src="../assets/elks-lodge.png">
+                </a>
+            </div>
+
             <div class="col"></div>
         </div>
         <br>
@@ -114,7 +120,7 @@
                 <div class="col-sm-12 col-md-6 col-lg-3">
                     <h5 class="footer-list-heading">Contact
                         <br>
-                        <h6 class="footer-subheading">business@dvhsrobotics.org</h6>
+                        <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
                     </h5>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
