--- a/pages/team.html
+++ b/pages/team.html
@@ -208,7 +208,7 @@
                     <div class="col-sm-12 col-md-6 col-lg-3">
                         <h5 class="footer-list-heading">Contact
                             <br>
-                            <h6 class="footer-subheading">business@dvhsrobotics.org</h6>
+                            <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
                         </h5>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3">
