Resized images and removed unused pictures

--- a/pages/team.html
+++ b/pages/team.html
@@ -69,17 +69,17 @@
                     <img class="img-fluid team-image z-depth-2" src="../assets/2018/OurTeam.jpg">
                 </div>
                 <div class="col-sm-12 col-lg-3">
-                    <img class="team-image-sm z-depth-2" src="../assets/2018/full-lift.jpg" alt="Insert Robot Pic Here">
+                    <img class="team-image-sm z-depth-2" src="../assets/2018/full-lift-resized.jpg" alt="Insert Robot Pic Here">
                 </div>
                 <div class="col-sm-12 col-lg-3">
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="team-image-sm z-depth-2" src="../assets/2018/2018robot_start.jpg" alt="Insert Robot Pic Here">
+                            <img class="team-image-sm z-depth-2" src="../assets/2018/2018robot_start-resized.jpg" alt="Insert Robot Pic Here">
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-12">
-                            <img class="team-image-sm z-depth-2" src="../assets/2018/fixing-bot.JPG" alt="Insert Robot Pic Here">
+                            <img class="team-image-sm z-depth-2" src="../assets/2018/fixing-bot-resized.png" alt="Insert Robot Pic Here">
                         </div>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-lg-6">
-                        <img class="img-fluid team-image z-depth-2" src="../assets/2017/pit.JPG">
+                        <img class="img-fluid team-image z-depth-2" src="../assets/2017/pit-resized.png">
                     </div>
                     <div class="col-sm-12 col-lg-6">
                         <div class="row">
