Added team video to front page

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     introduced to possible career choices in STEM, such as computer science and engineering. We will put
                     our absolute best effort into climbing the ranks at the UC Davis competition and other competitions in
                     the future. NexGen will strive for success and NexGen will work to be the best of the Next Generation.</p>
-                <a href="#competitions">
+                <a href="#team-video">
                     <button class="btn btn-primary btn-rounded">
-                        <i class="fa fa-chevron-down" aria-hidden="true"></i> See Our Robots
+                        <i class="fa fa-chevron-down" aria-hidden="true"></i> See 2018 Team Video
                     </button>
                 </a>
             </div>
@@ -179,6 +179,16 @@
         <br>
     </div>
 
+    <!-- Team Video -->
+    <div class="container-fluid body-light" id="team-video">
+        <h1 class="header-dark">2018 Team Video</h1>
+        <div class="row">
+            <div class="col-sm-12 col-md-8 offset-md-2 embed-responsive embed-responsive-16by9">
+                <iframe src="https://drive.google.com/file/d/1yjFrV0eq2yS3NrABgP2nCg_qkOa4hQW8/preview" ></iframe>
+            </div>
+        </div>
+    </div>
+
     <!-- Footer -->
     <div class="container-fluid dark-footer">
         <footer class="page-footer dark-footer">
@@ -204,11 +214,18 @@
                     </ul>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                        <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6></h5>
-                    </div>
+                    <h5 class="footer-list-heading">Contact
+                        <br>
+                        <h6 class="footer-subheading contact-email">business@dvhsrobotics.org</h6>
+                    </h5>
+                </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading"><a href="pages/calendar.html">Calendar</a></h5>
-                    <h5 class=""><a href="pages/sponsors.html">Sponsors</a></h5>
+                    <h5 class="footer-list-heading">
+                        <a href="pages/calendar.html">Calendar</a>
+                    </h5>
+                    <h5 class="">
+                        <a href="pages/sponsors.html">Sponsors</a>
+                    </h5>
                 </div>
             </div>
         </footer>
