--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             <img class="d-block w-100" src="assets/2018/article-resized.jpg" alt="working picture">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="assets/2018/ourteam-resized.jpg" alt="group photo">
+                            <img class="d-block w-100" src="assets/2018/fullteam-resized.png" alt="group photo">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="assets/2018/seniors-resized.jpg" alt="group photo">
@@ -106,10 +106,10 @@
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
+                        <span class="carousel-control-prev-icon"><i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i></span>
                     </a>
                     <a class="carousel-control-next" href="#mainCarousel" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon"></span>
+                        <span class="carousel-control-next-icon"><i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i></span>
                     </a>
                 </div>
             </div>
