--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -57,35 +57,47 @@
     </nav>
 
     <!-- Custom Calendar -->
-    <div class="container-fluid body-light">
+    <div class="container-fluid body-light calendar-container">
+        <br>
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-1" id="nextWeek">
+                <button class="btn btn-primary btn-sm" onclick="">
+                    <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
+                </button>
+            </div>
+            <div class="col-sm-10">
                 <h4 id="calendarDateRangeHeader">Date Range Header</h4>
+            </div>
+            <div class="col-sm-1" id="nextWeek">
+                <button class="btn btn-primary btn-sm" onclick="">
+                    <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 offset-lg-2 day-box">
                 <p>Lorem ipsum dolor sit amet,1 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
                 <p>Lorem ipsum dolor sit amet,2 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
                 <p>Lorem ipsum dolor sit amet,3 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
                 <p>Lorem ipsum dolor sit amet,4 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
                 <p>Lorem ipsum dolor sit amet,5 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
                 <p>Lorem ipsum dolor sit amet,6 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1">
+            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
                 <p>Lorem ipsum dolor sit amet,7 </p>
             </div>
         </div>
+        <br>
     </div>
 
     <!-- Footer -->
