reformatted custom calendar grid

--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -75,25 +75,25 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4 col-md-2 col-lg-1 offset-lg-2 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,1 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,2 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,3 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,4 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,5 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,6 </p>
             </div>
-            <div class="col-sm-4 col-md-2 col-lg-1 day-box">
+            <div class="col day-box">
                 <p>Lorem ipsum dolor sit amet,7 </p>
             </div>
         </div>
