--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -74,28 +74,28 @@
                 </button>
             </div>
         </div>
-        <div class="row">
-            <div class="col day-box">
+        <div class="row" id="week">
+            <!-- <div class="col day-box" id="sun">
                 <p>Lorem ipsum dolor sit amet,1 </p>
             </div>
-            <div class="col day-box">
+            <div class="col day-box" id="mon">
                 <p>Lorem ipsum dolor sit amet,2 </p>
             </div>
-            <div class="col day-box">
+            <div class="col day-box" id="tue">
                 <p>Lorem ipsum dolor sit amet,3 </p>
             </div>
-            <div class="col day-box">
+            <div class="col day-box" id="wed">
                 <p>Lorem ipsum dolor sit amet,4 </p>
             </div>
-            <div class="col day-box">
+            <div class="col day-box" id="thu">
                 <p>Lorem ipsum dolor sit amet,5 </p>
             </div>
-            <div class="col day-box">
+            <div class="col day-box" id="fri">
                 <p>Lorem ipsum dolor sit amet,6 </p>
             </div>
-            <div class="col day-box">
+            <div class="col day-box" id="sat">
                 <p>Lorem ipsum dolor sit amet,7 </p>
-            </div>
+            </div> -->
         </div>
         <br>
     </div>
