--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -60,7 +60,7 @@
     <div class="container-fluid body-light calendar-container">
         <br>
         <div class="row">
-            <div class="col-sm-1" id="nextWeek">
+            <div class="col-sm-1" id="prevWeek">
                 <button class="btn btn-primary btn-sm" onclick="">
                     <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
                 </button>
@@ -69,7 +69,7 @@
                 <h4 id="calendarDateRangeHeader">Date Range Header</h4>
             </div>
             <div class="col-sm-1" id="nextWeek">
-                <button class="btn btn-primary btn-sm" onclick="">
+                <button class="btn btn-primary btn-sm" onclick="nextWeek()">
                     <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
                 </button>
             </div>
