--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -61,7 +61,7 @@
         <br>
         <div class="row">
             <div class="col-sm-1" id="prevWeek">
-                <button class="btn btn-primary btn-sm" onclick="">
+                <button class="btn btn-primary btn-sm" onclick="prevWeek()">
                     <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
                 </button>
             </div>
