--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -141,7 +141,7 @@
             </div>
         </footer>
     </div>
-    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- <script src="https://apis.google.com/js/api.js"></script> -->
     <script src="../js/calendar.js"></script>
 </body>
 
