--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -68,6 +68,7 @@
     <br>
     <br>
     <br>
+    <a href="./customcalendar.html"><h3 style="color: black;">Click here to go to WIP custom calendar</h3></a>
 
     <!-- Footer -->
     <div class="container-fluid dark-footer">
