--- a/pages/team.html
+++ b/pages/team.html
@@ -157,25 +157,13 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-lg-6">
-                        <img class="img-fluid team-image z-depth-2" src="../assets/2017/pit-resized.png">
+                        <img class="img-fluid team-image z-depth-2" src="../assets/2017/team2017-resized.png">
                     </div>
-                    <div class="col-sm-12 col-lg-6">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <img src="../assets/" alt="Insert Robot Pic Here">
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="../assets/" alt="Insert Robot Pic Here">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <img src="../assets/" alt="Insert Robot Pic Here">
-                            </div>
-                            <div class="col-sm-6">
-                                <img src="../assets/" alt="Insert Robot Pic Here">
-                            </div>
-                        </div>
+                    <div class="col-sm-12 col-lg-3">
+                        <img class="img-fluid team-image-sm z-depth-2" src="../assets/2017/robotonfield-resized.png" alt="Insert Robot Pic Here">
+                    </div>
+                    <div class="col-sm-12 col-lg-3">
+                        <img class="img-fluid team-image-sm z-depth-2" src="../assets/2017/robotclimbing-resized.png" alt="Insert Robot Pic Here">
                     </div>
                 </div>
             </div>
