Made webdev team page actually load

--- a/pages/webdevteam.html
+++ b/pages/webdevteam.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/logo.png" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
+    <link href="../css/mdb.min.css" rel="stylesheet">
     <!-- Custom Styles -->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md">
-        <img class="navbar-brand" src="assets/banner-trans.png">
+        <img class="navbar-brand" src="../assets/banner-trans.png">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu">
             <span class="navbar-toggler-icon">
                 <a href="#">
@@ -36,13 +36,13 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/team.html">Our Team</a>
+                    <a class="nav-link" href="team.html">Our Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/sponsors.html">Sponsors</a>
+                    <a class="nav-link" href="sponsors.html">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/calendar.html">Calendar</a>
+                    <a class="nav-link" href="calendar.html">Calendar</a>
                 </li>
                 <li class="nav-item">
                     <button type="button" class="btn btn-sm btn-yellow">
@@ -54,11 +54,21 @@
         </div>
     </nav>
 
-    <h1>WIP</h1>
-    <h1>WIP</h1>
-    <h1>WIP</h1>
-    <h1>WIP</h1>
-    <h1>WIP</h1>
+    <div class="container-fluid body-light">
+            <h3 style="color: black; text-align: left;">Aesthetically Challenged Developer</h3>
+            <h4 style="color: black;">Rameez Mughal</h4>
+            <h3 style="color: black; text-align: left;">Guy Who Actually Puts Website On The Internet</h3>
+            <h4 style="color: black;">Armand Agopian</h4>
+            <h3 style="color: black; text-align: left;">Senior Citizens</h3>
+            <h4 style="color: black;">Rohan Kapur</h4>
+            <h4 style="color: black;">Daniel Webster</h4>
+            <h1 style="color: black;">WIP</h1>
+            <!-- Yeah I used inline styling. deal with it -->
+            <h1>WIP</h1>
+            <h1>WIP</h1>
+            <h1>WIP</h1>
+            <h1>WIP</h1>
+    </div>
 
     <!-- Footer -->
     <div class="container-fluid dark-footer">
@@ -74,13 +84,13 @@
                     <h5 class="footer-list-heading">Team</h5>
                     <ul class="list-unstyled footer-list">
                         <li>
-                            <a href="pages/team.html#team2017">2017</a>
+                            <a href="team.html#team2017">2017</a>
                         </li>
                         <li>
-                            <a href="pages/team.html#team2018">2018</a>
+                            <a href="team.html#team2018">2018</a>
                         </li>
                         <li>
-                            <a href="pages/webdevteam.html">Web Dev Team</a>
+                            <a href="webdevteam.html">Web Dev Team</a>
                         </li>
                     </ul>
                 </div>
@@ -88,8 +98,8 @@
                         <h5 class="footer-list-heading">Contact <br> <h6 class="footer-subheading">business@dvhsrobotics.org</h6></h5>
                     </div>
                 <div class="col-sm-12 col-md-6 col-lg-3">
-                    <h5 class="footer-list-heading"><a href="pages/calendar.html">Calendar</a></h5>
-                    <h5 class=""><a href="pages/sponsors.html">Sponsors</a></h5>
+                    <h5 class="footer-list-heading"><a href="calendar.html">Calendar</a></h5>
+                    <h5 class=""><a href="sponsors.html">Sponsors</a></h5>
                 </div>
             </div>
         </footer>
@@ -100,13 +110,13 @@
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
-    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
     <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script type="text/javascript" src="../js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <script type="text/javascript" src="../js/mdb.min.js"></script>
 </body>
 
 </html>
