enlarge carousel arrow on hover

--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -75,6 +75,13 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-sm-12">
+                <button class="btn btn-primary btn-sm" onclick="monthView()">
+                    Month View
+                </button>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-sm-11">
                 <div class="row" id="week">
 
