removed enlarged arrow on carousel; custom calendar revisions

--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -81,12 +81,7 @@
                 </button>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-11">
-                <div class="row" id="week">
-
-                </div>
-            </div>
+        <div class="row" id="weeks">
         </div>
         <br>
     </div>
