Add theme color for chrome, GSuite verification, and fixed favicon path

--- a/pages/webdevteam.html
+++ b/pages/webdevteam.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../assets/logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png" />
+    <meta name="theme-color" content="#0BC4B9">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
