--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>NexGen Robotics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/logo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/logo.png" />
+    <meta name="theme-color" content="#0BC4B9">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
@@ -15,6 +16,9 @@
     <link href="css/mdb.min.css" rel="stylesheet">
     <!-- Custom Styles -->
     <link href="css/main.css" rel="stylesheet">
+    
+    <!-- GSuite Verification. DO NOT DELETE!!! -->
+    <meta name="google-site-verification" content="QfQ8gw4WO_ZCZuy-MN7A_0GdbJl_mBEOg3SC9yqfRkI" />
 </head>
 
 <body>
