--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -61,7 +61,7 @@
     <div class="container-fluid body-light calendar-container">
         <br>
         <div class="row">
-            <div class="col-sm-1" id="prevWeek">
+            <div class="col-sm-1" id="calendarNavPrevButton">
                 <button class="btn btn-primary btn-sm" onclick="prevWeek()">
                     <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
                 </button>
@@ -69,14 +69,14 @@
             <div class="col-sm-10">
                 <h4 id="calendarDateRangeHeader">Date Range Header</h4>
             </div>
-            <div class="col-sm-1" id="nextWeek">
+            <div class="col-sm-1" id="calendarNavNextButton">
                 <button class="btn btn-primary btn-sm" onclick="nextWeek()">
                     <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
                 </button>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12" id="toggleCalendarView">
                 <button class="btn btn-primary btn-sm" onclick="monthView()">
                     Month View
                 </button>
