--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -61,22 +61,22 @@
     <div class="container-fluid body-light calendar-container">
         <br>
         <div class="row">
-            <div class="col-sm-1" id="calendarNavPrevButton">
+            <div class="col-sm-2" id="calendarNavPrevButton">
                 <button class="btn btn-primary btn-sm" onclick="prevWeek()">
                     <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
                 </button>
             </div>
-            <div class="col-sm-10">
+            <div class="col-sm-8">
                 <h4 id="calendarDateRangeHeader">Date Range Header</h4>
             </div>
-            <div class="col-sm-1" id="calendarNavNextButton">
+            <div class="col-sm-2" id="calendarNavNextButton">
                 <button class="btn btn-primary btn-sm" onclick="nextWeek()">
                     <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
                 </button>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12" id="toggleCalendarView">
+            <div class="col-sm-12 offset-5" id="toggleCalendarView">
                 <button class="btn btn-primary btn-sm" onclick="monthView()">
                     Month View
                 </button>
@@ -128,6 +128,15 @@
             </div>
         </footer>
     </div>
+    <!-- SCRIPTS -->
+    <!-- JQuery -->
+    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="../js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="../js/mdb.min.js"></script>
     <!-- <script src="https://apis.google.com/js/api.js"></script> -->
     <script src="../js/calendar.js"></script>
 </body>
