--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -137,7 +137,9 @@
     <script type="text/javascript" src="../js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="../js/mdb.min.js"></script>
-    <!-- <script src="https://apis.google.com/js/api.js"></script> -->
+    <!-- Google API JS -->
+    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- Custom Calendar JS -->
     <script src="../js/calendar.js"></script>
 </body>
 
