cleaned up calendar code and added whitespace underneath calendar

--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -85,7 +85,10 @@
         <div class="row" id="weeks">
         </div>
         <br>
+        <div id="calendar-bottom-padding"></div>
     </div>
+
+    
 
     <!-- Footer -->
     <div class="container-fluid dark-footer">
