--- a/pages/customcalendar.html
+++ b/pages/customcalendar.html
@@ -67,7 +67,7 @@
                         <i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
                     </button>
                 </div>
-                <h5 id="calendarDateRangeHeader">Date Range Header</h5>
+                <h5 id="calendarDateRangeHeader">Loading ...</h5>
                 <div id="calendarNavNextButton">
                     <button class="btn btn-primary btn-sm" onclick="nextWeek()">
                         <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
