--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                     <div class="card-body">
                         <h4 class="card-title">2019</h4>
                         <button class="btn btn-outline-red waves-effect kickoff">
-                            <a href="#">Coming Soon</a>
+                            <a href="https://www.youtube.com/watch?v=Mew6G_og-PI" target="_blank">
+                                <i class="fa fa-youtube-play" aria-hidden="true"></i> Kickoff Video</a>
                         </button>
                     </div>
                 </div>
