--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -64,13 +64,23 @@
         <hr>
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
-                <a href="https://www.dow.com/en-us/about-dow/locations/pittsburg">
-                    <img class="img-fluid" src="../assets/Dow_Chemical_Company_logo.svg.png">
+                <a href="https://www.apple.com">
+                    <img class="img-fluid" src="../assets/sponsors/apple_logo.svg">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+                <a href="https://www.google.com">
+                    <img class="img-fluid" src="../assets/sponsors/google_logo.svg">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
+                <a href="https://www.llnl.gov/">
+                    <img class="img-fluid" src="../assets/sponsors/lawrence_logo.png">
                 </a>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4 sponsor">
                 <a href="https://www.elks.org/lodges/home.cfm?lodgenumber=1474">
-                    <img class="img-fluid" src="../assets/elks-lodge.png">
+                    <img class="img-fluid" src="../assets/sponsors/elks_logo.png">
                 </a>
             </div>
 
